--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "help": "nx help"
   },
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "document-register-element": "1.13.1"
+  },
   "devDependencies": {
-    "@nrwl/web": "^9.3.0",
+    "@nrwl/web": "9.3.0",
     "@nrwl/workspace": "9.3.0",
     "@types/node": "~8.9.4",
     "dotenv": "6.2.0",
@@ -36,6 +38,16 @@
     "prettier": "2.0.4",
     "ts-node": "~7.0.0",
     "tslint": "~6.0.0",
-    "typescript": "~3.8.3"
+    "typescript": "~3.8.3",
+    "@nrwl/jest": "9.3.0",
+    "jest": "25.2.3",
+    "@types/jest": "25.1.4",
+    "ts-jest": "25.2.1",
+    "cypress": "^4.1.0",
+    "@nrwl/cypress": "9.3.0",
+    "@nrwl/eslint-plugin-nx": "9.3.0",
+    "@typescript-eslint/parser": "2.19.2",
+    "@typescript-eslint/eslint-plugin": "2.19.2",
+    "eslint-config-prettier": "6.0.0"
   }
 }
