Add devcontainer and dependabot configuration; update VSCode extensions recommendations

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,10 @@
   "recommendations": [
     "angular.ng-template",
     "analogjs.vscode-analog",
-    "vitest.explorer"
+    "vitest.explorer",
+    "editorconfig.editorconfig",
+    "yzhang.markdown-all-in-one",
+    "davidanson.vscode-markdownlint",
+    "christian-kohler.npm-intellisense"
   ]
 }
